--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -4,7 +4,7 @@
 %\Configure{MathJaxMacros}{mymacros.tex} 
 \Css{
   /* global colours */
-  body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; font-family: 'Computer Modern', STIXGeneral, STIX, Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif; }
+  body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; font-family: STIXGeneral, STIX, Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif; }
   a     { color:\#0645ad; }                         /* GitHub-like link blue   */
   nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
   nav.crosslinks a { margin:0 .5em; text-decoration:none; }
@@ -130,9 +130,9 @@
 
 
 \DeclareRobustCommand{\hathat}[1]{% 
-\begingroup%
+\bgroup% It seems that \bgroup is necessary if you want to use \hathat as a base for superscripts
 \HCode{<\a:mathml mover accent="true"><\a:mathml mpadded voffset=".1em" lspace="-.15em"><\a:mathml mover accent="true"><\a:mathml mrow>}#1\HCode{</\a:mathml mrow><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover></\a:mathml mpadded><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover>}%
-\endgroup%
+\egroup%
 }
 
 % fix for accents
