--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -128,12 +128,12 @@
 \def\:tempa{\cr}
 \HLet\adl@cr\:tempa
 
-
-\DeclareRobustCommand{\hathat}[1]{% 
-\bgroup% It seems that \bgroup is necessary if you want to use \hathat as a base for superscripts
-\HCode{<\a:mathml mover accent="true"><\a:mathml mpadded voffset=".1em" lspace="-.15em"><\a:mathml mover accent="true"><\a:mathml mrow>}#1\HCode{</\a:mathml mrow><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover></\a:mathml mpadded><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover>}%
-\egroup%
-}
+% Temporarily opt out \hathat
+%\DeclareRobustCommand{\hathat}[1]{% 
+%\bgroup% It seems that \bgroup is necessary if you want to use \hathat as a base for superscripts
+%\HCode{<\a:mathml mover accent="true"><\a:mathml mpadded voffset=".1em" lspace="-.15em"><\a:mathml mover accent="true"><\a:mathml mrow>}#1\HCode{</\a:mathml mrow><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover></\a:mathml mpadded><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover>}%
+%\egroup%
+%}
 
 % fix for accents
 % note that this will broke support for these accents in text
